# ebook2pinyin

./: .gitignore  LICENSE  README.md  pinyin.css  pyproject.toml
books/: Lu Bin Xun Piao Liu Ji - Wei Zhi.mobi  gszelgcd.mobi  lbxplj.mobi  mgskdmxtzq5c.mobi
docs/: RELEASE.md
ebook2pinyin/: annotator.py  calibre.py  cli.py  epub.py  metadata.py  pdf.py  web.py
mobi_pinyin/: __init__.py  annotator.py  calibre.py  converter.py  epub.py  pdf.py  progress.py  web.py
test/: gszelgcd.html  mobi_py.html  mobi_py.mobi
test/跟周恩来一起过草地/: 跟周恩来一起过草地.html  跟周恩来一起过草地.mobi  跟周恩来一起过草地.ncx  跟周恩来一起过草地.opf
test/跟周恩来一起过草地/mobi7/: book.html  content.opf  toc.ncx
tests/: test_annotator.py  test_calibre.py  test_cli.py  test_converter.py  test_epub.py  test_metadata.py  test_pdf.py  test_web.py
